# nc_tg_bot

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
bot/: __main__.py
bot/core/: __init__.py  config.py  loaders.py  runners.py
bot/db/: __init__.py  database.py  db.py
bot/db/crud/: __init__.py  exceptions.py  user.py
bot/db/models/: __init__.py  base.py  user.py
bot/db/repositories/: __init__.py  base.py  users.py
bot/dialogs/: __init__.py
bot/dialogs/files/: __init__.py  getters.py  handlers.py  keyboards.py  states.py  utils.py  windows.py
bot/dialogs/search/: __init__.py  getters.py  handlers.py  states.py  windows.py
bot/dialogs/settings/: __init__.py  getters.py  handlers.py  keyboards.py  windows.py
bot/dialogs/trash_bin/: __init__.py  getters.py  handlers.py  windows.py
bot/dialogs/trashbin/: __init__.py  getters.py  handlers.py  states.py  windows.py
bot/filters/: __init__.py  auth.py  authorization_filter.py  chat_type.py  only_private_filter.py
bot/handlers/: __init__.py  auth.py  common.py  core.py  errors.py
bot/handlers/auth/: auth.py
bot/handlers/default/: __init__.py
bot/handlers/files/: __init__.py  getters.py  handlers.py  keyboards.py  utils.py  windows.py
bot/handlers/menu/: logout.py
bot/handlers/menu/fsnode/: back.py  cancel.py  delete.py  download.py  menu.py  new.py  pag.py  select.py
bot/handlers/menu/search/: pag.py  search.py  select.py
bot/handlers/menu/trashbin/: cancel.py  fsnode.py  menu.py  pag.py
bot/handlers/search/: __init__.py  getters.py  handlers.py  keybaords.py  utils.py  windows.py
bot/handlers/settings/: __init__.py  getters.py  handlers.py  keyboards.py  windows.py
bot/handlers/trashbin/: __init__.py
bot/keyboards/: _fsnode_board_abstract.py  logout_boards.py
bot/locales/en/: auth.ftl  fsnode.ftl  search.ftl  trashbin.ftl
bot/locales/en/dialogs/: files.ftl
bot/locales/ru/: auth.ftl  fsnode.ftl  search.ftl  trashbin.ftl
bot/locales/ru/dialogs/: files.ftl
bot/middlewares/: __init__.py  db.py  nc.py  nextcloud_md.py  unitofwork_md.py
bot/nextcloud/: fsnode.py
bot/states/: __init__.py  files.py  fsnode_menu.py  menu.py  search.py  settings.py  trash_bin.py  trashbin.py
bot/utils/: __init__.py  commands.py  mime_symbols.py  serilization.py  symbols.py
migrations/: env.py
migrations/versions/: 2024-11-15_.py  2024-11-24_init_migration.py
