[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
package-mode = false
name = "nc-tg-bot"
version = "0.1.0"
description = "🤖 Telegram bot for interacting with Nextcloud via Telegram."
authors = [
  "blvd <blvd@bagoont.ru>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.8.0"
redis = "^5.0.7"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
asyncpg = "^0.30.0"
uvloop = "^0.21.0"
aiogram-i18n = "^1.4"
fluent-runtime = "^0.4.0"
nc-py-api = "^0.18.0"
aiosqlite = "^0.20.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
pyright = "^1.1.389"
pre-commit = "^4.0.0"

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [
  "logs",
  "migrations",
]
lint.select = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "G",
  "I",
  "PIE",
  "Q",
  "RET",
  "RUF",
  "S",
  "SIM",
  "UP",
  "W",
]
lint.extend-ignore = [
  "D101",
  "D105",
  "D107",
  "D203",
  "D213",
  "D401",
  "I001",
  "RUF100",
]

lint.isort.known-local-folder = [ "bot" ]
lint.pylint.max-args = 7

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = "warning"
venvPath = "."
venv = "venv"
