[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
package-mode = false
name = "nc-tg-bot"
version = "0.1.0"
description = "🤖 Telegram bot for interacting with Nextcloud via Telegram."
authors = [
  "blvd <blvd@bagoont.ru>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.16.0"
aiogram-dialog = "^2.3.0"
redis = "^5.2.1"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
asyncpg = "^0.30.0"
aiosqlite = "^0.20.0"
pydantic-settings = "^2.3.4"
uvloop = "^0.21.0"
nc-py-api = "^0.18.0"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
mypy = "^1.14.0"
pre-commit = "^4.0.0"

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
  "logs",
  "migrations",
]
lint.select = [ "ALL" ]
lint.extend-ignore = [
  "ANN401",
  "ARG001",
  "COM812",
  "D203",
  "D211",
  "D213",
  "ISC001",
  "RUF006",
]
lint.isort.known-local-folder = [ "bot" ]
lint.pylint.max-args = 7

[tool.mypy]
python_version = "3.10"
show_error_codes = true
show_error_context = true
pretty = true
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true
plugins = [
  "pydantic.mypy",
  "sqlalchemy.ext.mypy.plugin",
]

[[tool.mypy.overrides]]
module = [
  "asyncpg.*",
  "nc_py_api.*",
]
ignore_missing_imports = true
